use class for carousel

--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
 	<head>
 		<title>Vélô : location de vélos à Toulouse</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="script.js" async></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta charset="utf-8">
-        
+
         <!-- A COMLPETER -->
         <!-- Open Graph data -->
 		<meta property="og:title" content=""/>
@@ -17,7 +16,7 @@
 		<meta property="og:url" content=""/>
 		<meta property="og:image" content=""/>
 		<meta property="og:description" content=""/>
-            
+
         <!-- A COMLPETER -->
         <!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary">
@@ -42,7 +41,7 @@
 					<li><img src="images/exlpication_reservation_velo_toulouse_slide_3.jpg"></li>
 					<li><img src="images/exlpication_reservation_velo_toulouse_slide_4.jpg"></li>
 					<li><img src="images/exlpication_reservation_velo_toulouse_slide_5.jpg"></li>
-					<li><img src="images/exlpication_reservation_velo_toulouse_slide_6.jpg"></li>					
+					<li><img src="images/exlpication_reservation_velo_toulouse_slide_6.jpg"></li>
 				</ul>
 			</div>
 			<div class="carousel_navigation">
@@ -59,7 +58,10 @@
 			</div>
 		</div>
 		<h3 class="deux"><div class="numerotation">2</div><div class="etape">C'est parti, je réserve un vélo !</div></h3>
-		
+
+
+        <script type="application/javascript" src="js/Carousel.js"></script>
+        <script type="application/javascript" src="js/index.js"></script>
 
 	</body>
 </html>
