--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 	<head>
 		<title>Vélô : location de vélos à Toulouse</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="script.js" async></script>
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta charset="utf-8">
+		<meta charset="utf-8">
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
         
         <!-- A COMLPETER -->
         <!-- Open Graph data -->
@@ -28,12 +30,15 @@
 	</head>
 
 	<body>
+		<!-- ACCUEIL -->
         <div class="home_arrival">
             <h1> <i class="fas fa-bicycle"></i> Vélô : la solution simple pour louer un vélo à Toulouse</h1>
             <div class="start_button"> Commencer l'expérience </div>
 		</div>
 		<h2>Bienvenue sur le site de location de vélo dans la belle ville de Toulouse</h2>
 		<h3><div class="numerotation">1</div><div class="etape">Vélô : Comment ça marche ?</div></h3>
+		
+		<!-- CARROUSEL -->
 		<div class="carousel">
 			<div class="carousel_img">
 				<ul>
@@ -60,6 +65,34 @@
 		</div>
 		<h3 class="deux"><div class="numerotation">2</div><div class="etape">C'est parti, je réserve un vélo !</div></h3>
 		
+		<!-- CARTE -->
+		<div id="mapid"></div>
 
+		<!-- INFORMATIONS STATION SELECTIONNEE -->
+
+		<div class="infos-station">
+			<div class="titre-infos-station">Détails de la station</div>
+			<div class="propriete-station"><i class="fas fa-lock"></i> Statut<div class="statut-station"></div></div>
+			<div class="propriete-station"><i class="fas fa-search"></i> Nom <div class="nom-station"></div></div>
+			<div class="propriete-station"><i class="fas fa-map-marked-alt"></i> Adresse <div class="adresse-station"></div></div>
+			<div class="propriete-station"><i class="fas fa-bicycle"></i> Vélos disponibles <div class="velos-station"></div></div>
+			<div class="infos-client">
+				<input type="text" placeholder="Votre prénom">
+				<input type="text" placeholder="Votre nom">
+			</div>
+		</div>
+		<div class="resa-bouton">
+			<a href="">Réserver</a>
+		</div>
+
+		<!-- INFORMATIONS RESERVATION EFFECTUEE -->
+		<h3><div class="numerotation">3</div><div class="etape">Je vérifie les informations ci -dessous :</div></h3>
+
+		<!-- JAVASCRIPT -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="js/ajax.js" ></script>
+		<script src="js/carousel.js" ></script>
+		<script src="js/index.js" ></script>
+		<script src="js/map.js" ></script>	
 	</body>
 </html>
