--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="js/ajax.js"></script>
 		<script src="js/carousel.js"></script>
-		<script src="js/index.js"></script>
 		<script src="js/map.js"></script>
-		<script src="js/canva.js"></script>			
+		<script src="js/canva.js"></script>	
+		<script src="js/resa.js"></script>	
+		<script src="js/index.js"></script>		
 	</body>
 </html>
